syntax = "proto3";

option go_package = "sigmaos/util/tracing/proto";

message SpanContextConfig {
  bytes  traceID    = 1;
  bytes  spanID     = 2;
  int32  traceFlags = 3;
  string traceState = 4;
  bool   remote     = 5;
}
